--- a/index.html
+++ b/index.html
@@ -44,19 +44,29 @@
             }
 
         </style>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     </head>
     <body>
-        <h1>Vehicle Type</h1>
+        <h3>Home mortgages by work status</h3>
         <%-
-          columnBarChartHelper.getColumnBarChart({
-            data: homeMortgageData,
-            width: 500,
+          pieChartHelper.getPieChart({
+            data: vehicleTypeData,
+            width: 600,
             height: 400,
             xAxisLabel: 'Work Status',
             yAxisLabel: 'Count Case ID',
             containerId: 'column_bar_chart_small'
           })
         %>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+        <%-
+          columnBarChartHelper.getColumnBarChart({
+            data: homeMortgageData,
+            width: 600,
+            height: 400,
+            xAxisLabel: 'Work Status',
+            yAxisLabel: 'Count Case ID',
+            containerId: 'column_bar_chart_small'
+          })
+        %>
     </body>
 </html>
